--- a/src/main/resources/view/AdminView.fxml
+++ b/src/main/resources/view/AdminView.fxml
@@ -37,17 +37,17 @@
    </top>
    <bottom>
        <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-           <Button layoutX="79.0" layoutY="2.0" mnemonicParsing="false" onAction="#newFragebogen" text="neu"
+           <Button layoutX="79.0" layoutY="2.0" mnemonicParsing="false" onAction="#newQuestionnaire" text="neu"
                    AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="79.0"/>
        </AnchorPane>
    </bottom>
    <center>
-      <TableView fx:id="tbl_fragebogen" editable="true" BorderPane.alignment="CENTER">
+      <TableView fx:id="questionnaireTableView" editable="true" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="nameCol" text="Name" />
-          <TableColumn fx:id="dateCol" text="Erstelldatum" />
-            <TableColumn fx:id="activCol" text="Aktiv" />
-            <TableColumn fx:id="finalCol" text="Final" />
+          <TableColumn fx:id="nameColumn" text="Name" />
+          <TableColumn fx:id="dateColumn" text="Erstelldatum" />
+            <TableColumn fx:id="activeColumn" text="Aktiv" />
+            <TableColumn fx:id="finalColumn" text="Final" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
