--- a/src/main/resources/view/QuestionView.fxml
+++ b/src/main/resources/view/QuestionView.fxml
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
    <bottom>
       <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -42,45 +29,58 @@
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="335.0" />
                     </columnConstraints>
                     <rowConstraints>
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS" />
                       <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS" />
                       <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="28.0" vgrow="ALWAYS" />
                       <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="16.0" vgrow="ALWAYS" />
                         <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="30.0" vgrow="ALWAYS" />
                     </rowConstraints>
                      <children>
-                        <Label maxWidth="1.7976931348623157E308" text="Frage:" />
-                        <TextField fx:id="questionTextField" maxWidth="1.7976931348623157E308" prefWidth="0.0" GridPane.columnIndex="1">
+                        <Label maxWidth="1.7976931348623157E308" text="Frage:" GridPane.rowIndex="1" />
+                        <TextField fx:id="questionTextField" maxWidth="1.7976931348623157E308" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="8.0" />
                            </GridPane.margin>
                         </TextField>
-                        <Label maxWidth="1.7976931348623157E308" text="Position:" GridPane.rowIndex="1" />
-                        <ChoiceBox fx:id="positionChoiceBox" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Label maxWidth="1.7976931348623157E308" text="Position:" GridPane.rowIndex="2" />
+                        <ChoiceBox fx:id="positionChoiceBox" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets left="8.0" />
                            </GridPane.margin>
                         </ChoiceBox>
-                        <Label maxWidth="1.7976931348623157E308" text="Kategorie:" GridPane.rowIndex="2" />
-                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Label maxWidth="1.7976931348623157E308" text="Kategorie:" GridPane.rowIndex="3" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <children>
-                              <ChoiceBox fx:id="categoryChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS" />
+                              <ChoiceBox fx:id="categoryChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin></ChoiceBox>
                               <Button mnemonicParsing="false" onAction="#createCategory" text="Neue Kategorie" />
                            </children>
                            <GridPane.margin>
                               <Insets left="8.0" />
                            </GridPane.margin>
                         </HBox>
-                        <Label maxWidth="1.7976931348623157E308" text="Fragenart:" GridPane.rowIndex="3" />
-                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <Label maxWidth="1.7976931348623157E308" text="Fragenart:" GridPane.rowIndex="4" />
+                        <Label text="Überschrift:" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1">
                            <children>
-                              <ChoiceBox fx:id="questionTypeChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="133.0" HBox.hgrow="ALWAYS">
+                              <ChoiceBox fx:id="headlineChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS">
                                  <HBox.margin>
-                                    <Insets left="8.0" />
+                                    <Insets />
                                  </HBox.margin>
                               </ChoiceBox>
-                              <CheckBox fx:id="headlineCheckBox" mnemonicParsing="false" onAction="#updateCheckboxes" text="Überschrift" />
+                              <Button mnemonicParsing="false" onAction="#createHeadline" text="neue Überschrift" />
                            </children>
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
                         </HBox>
+                        <ChoiceBox fx:id="questionTypeChoiceBox" prefHeight="25.0" prefWidth="133.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="8.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
                      </children>
                   </GridPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -93,6 +93,11 @@
                                  </FlowPane.margin>
                               </CheckBox>
                               <CheckBox fx:id="requiredQuestionCheckBox" mnemonicParsing="false" onAction="#updateCheckboxes" text="Pflichtfrage">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="evaluationQuestionCheckBox" mnemonicParsing="false" onAction="#updateCheckboxes" text="Bewertungsfrage">
                                  <FlowPane.margin>
                                     <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                                  </FlowPane.margin>
