--- a/src/main/resources/view/QuestionView.fxml
+++ b/src/main/resources/view/QuestionView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
@@ -23,7 +24,7 @@
          <children>
             <VBox prefHeight="511.0" prefWidth="313.0" spacing="16.0" HBox.hgrow="ALWAYS">
                <children>
-                  <GridPane prefHeight="295.0" prefWidth="443.0">
+                  <GridPane prefHeight="275.0" prefWidth="443.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="108.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="335.0" />
@@ -36,12 +37,7 @@
                         <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="30.0" vgrow="ALWAYS" />
                     </rowConstraints>
                      <children>
-                        <Label maxWidth="1.7976931348623157E308" text="Frage:" GridPane.rowIndex="1" />
-                        <TextField fx:id="questionTextField" maxWidth="1.7976931348623157E308" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="8.0" />
-                           </GridPane.margin>
-                        </TextField>
+                        <Label maxWidth="1.7976931348623157E308" text="Frage:" />
                         <Label maxWidth="1.7976931348623157E308" text="Position:" GridPane.rowIndex="2" />
                         <ChoiceBox fx:id="positionChoiceBox" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <GridPane.margin>
@@ -55,22 +51,31 @@
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin></ChoiceBox>
-                              <Button mnemonicParsing="false" onAction="#createCategory" text="Neue Kategorie" />
+                              <Button mnemonicParsing="false" onAction="#createCategory">
+                                 <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../images/icons/edit_2.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
                            </children>
                            <GridPane.margin>
                               <Insets left="8.0" />
                            </GridPane.margin>
                         </HBox>
                         <Label maxWidth="1.7976931348623157E308" text="Fragenart:" GridPane.rowIndex="4" />
-                        <Label text="Überschrift:" />
-                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1">
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                              <ChoiceBox fx:id="headlineChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS">
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </ChoiceBox>
-                              <Button mnemonicParsing="false" onAction="#createHeadline" text="neue Überschrift" />
+                              <ChoiceBox fx:id="headlineChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS" />
+                              <Button fx:id="newHeadlineButton" mnemonicParsing="false" onAction="#createHeadline">
+                                 <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../images/icons/edit_2.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
                            </children>
                            <padding>
                               <Insets left="8.0" />
@@ -81,6 +86,12 @@
                               <Insets left="8.0" />
                            </GridPane.margin>
                         </ChoiceBox>
+                        <TextField fx:id="questionTextField" maxWidth="1.7976931348623157E308" prefWidth="0.0" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets left="8.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <Label text="Überschrift:" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -150,6 +161,7 @@
                                     <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                                  </FlowPane.margin>
                               </Button>
+                              <Button mnemonicParsing="false" onAction="#validation" text="Validierung" />
                            </children>
                         </FlowPane>
                      </children>
