--- a/src/main/resources/view/QuestionView.fxml
+++ b/src/main/resources/view/QuestionView.fxml
@@ -96,7 +96,7 @@
                   </GridPane>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <FlowPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                        <FlowPane prefHeight="89.0" prefWidth="443.0" VBox.vgrow="ALWAYS">
                            <children>
                               <CheckBox fx:id="textAreaCheckBox" mnemonicParsing="false" onAction="#updateCheckboxes" text="Textarea">
                                  <FlowPane.margin>
@@ -135,35 +135,22 @@
                               </CheckBox>
                            </children>
                         </FlowPane>
-                        <FlowPane prefHeight="200.0" prefWidth="200.0">
+                        <GridPane prefHeight="131.0" prefWidth="443.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="120.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="323.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
                            <children>
-                              <CheckBox fx:id="numberCheckBox" mnemonicParsing="false" onAction="#updateCheckboxes" text="Zahl">
-                                 <FlowPane.margin>
-                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                                 </FlowPane.margin>
-                              </CheckBox>
-                              <ChoiceBox fx:id="numberChoiceBox" prefWidth="150.0">
-                                 <FlowPane.margin>
-                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                                 </FlowPane.margin>
-                              </ChoiceBox>
-                              <TextField fx:id="numberTextField" onAction="#updateCheckboxes">
-                                 <FlowPane.margin>
-                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                                 </FlowPane.margin>
-                              </TextField>
-                           </children>
-                        </FlowPane>
-                        <FlowPane prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Button mnemonicParsing="false" onAction="#react" text="Frage reagiert auf">
-                                 <FlowPane.margin>
-                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                                 </FlowPane.margin>
-                              </Button>
+                              <Button mnemonicParsing="false" onAction="#react" text="Frage reagiert auf" GridPane.rowIndex="1" />
                               <Button mnemonicParsing="false" onAction="#validation" text="Validierung" />
+                              <Label text="Label" GridPane.columnIndex="1" />
+                              <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
-                        </FlowPane>
+                        </GridPane>
                      </children>
                   </VBox>
                </children>
