--- a/src/main/resources/view/QuestionView.fxml
+++ b/src/main/resources/view/QuestionView.fxml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="800.0"
+            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="question.QuestionController">
    <bottom>
       <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" layoutX="190.0" layoutY="19.0" prefHeight="33.0" prefWidth="210.0" spacing="8.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="190.0" AnchorPane.topAnchor="0.0">
+            <HBox alignment="CENTER" layoutX="190.0" layoutY="19.0" prefHeight="33.0" prefWidth="210.0" spacing="8.0"
+                  AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="190.0"
+                  AnchorPane.topAnchor="0.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#setPreview" text="Vorschau" />
-                  <Button mnemonicParsing="false" onAction="#exit" text="Abbruch" />
-                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#save" text="Speichern" />
+                  <Button mnemonicParsing="false" onAction="#setPreview" text="Vorschau"/>
+                  <Button mnemonicParsing="false" onAction="#exit" text="Abbruch"/>
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#save" text="Speichern"/>
                </children>
             </HBox>
          </children>
@@ -24,30 +40,34 @@
          <children>
             <VBox prefHeight="511.0" prefWidth="313.0" spacing="16.0" HBox.hgrow="ALWAYS">
                <children>
-                  <GridPane prefHeight="275.0" prefWidth="443.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="108.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="335.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="28.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="16.0" vgrow="ALWAYS" />
-                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="30.0" vgrow="ALWAYS" />
+                  <GridPane fx:id="formGridPane" prefHeight="275.0" prefWidth="443.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0"
+                                           prefWidth="404.0"/>
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="28.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="16.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="30.0" vgrow="ALWAYS"/>
                     </rowConstraints>
                      <children>
-                        <Label maxWidth="1.7976931348623157E308" text="Frage:" />
-                        <Label maxWidth="1.7976931348623157E308" text="Position:" GridPane.rowIndex="2" />
-                        <ChoiceBox fx:id="positionChoiceBox" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Label text="Frage:"/>
+                        <Label text="Position:" GridPane.rowIndex="2"/>
+                        <ChoiceBox fx:id="positionChoiceBox" prefHeight="25.0" prefWidth="51.0" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="2">
                            <GridPane.margin>
-                              <Insets left="8.0" />
+                              <Insets left="8.0"/>
                            </GridPane.margin>
                         </ChoiceBox>
-                        <Label maxWidth="1.7976931348623157E308" text="Kategorie:" GridPane.rowIndex="3" />
-                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <Label text="Kategorie:" GridPane.rowIndex="3"/>
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0"
+                              GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <children>
-                              <ChoiceBox fx:id="categoryChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS">
+                              <ChoiceBox fx:id="categoryChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0"
+                                         prefWidth="188.0" HBox.hgrow="ALWAYS">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin></ChoiceBox>
@@ -64,7 +84,7 @@
                               <Insets left="8.0" />
                            </GridPane.margin>
                         </HBox>
-                        <Label maxWidth="1.7976931348623157E308" text="Fragenart:" GridPane.rowIndex="4" />
+                        <Label text="Fragenart:" GridPane.rowIndex="4"/>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
                               <ChoiceBox fx:id="headlineChoiceBox" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="188.0" HBox.hgrow="ALWAYS" />
@@ -135,35 +155,27 @@
                               </CheckBox>
                            </children>
                         </FlowPane>
-                        <GridPane prefHeight="131.0" prefWidth="443.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="120.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="323.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="8.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#react" text="Frage reagiert auf" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" onAction="#validation" text="Validierung" />
-                              <Label text="Label" GridPane.columnIndex="1" />
-                              <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#validation" text="Validierung"/>
+                              <Button mnemonicParsing="false" onAction="#react" text="Frage reagiert auf"/>
                            </children>
-                        </GridPane>
+                           <VBox.margin>
+                              <Insets/>
+                           </VBox.margin>
+                        </HBox>
                      </children>
                   </VBox>
                </children>
             </VBox>
-            <VBox prefHeight="512.0" prefWidth="187.0" spacing="8.0" HBox.hgrow="ALWAYS">
+            <VBox prefHeight="511.0" prefWidth="283.0" spacing="8.0">
                <children>
-                  <TableView fx:id="answerTable" prefHeight="200.0" prefWidth="263.0" VBox.vgrow="ALWAYS">
-                    <columns>
-                      <TableColumn fx:id="answerIdTableColumn" prefWidth="58.0" text="Nr" />
-                      <TableColumn fx:id="answerValueTableColumn" prefWidth="215.0" text="Antwort" />
-                    </columns>
+                  <TableView fx:id="answerTable" prefHeight="200.0" prefWidth="250.0" VBox.vgrow="ALWAYS">
+                     <columns>
+                        <TableColumn fx:id="answerValueTableColumn" prefWidth="215.0" text="Antwort"/>
+                     </columns>
                      <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                      </columnResizePolicy>
                   </TableView>
                   <Button fx:id="newAnswerButton" mnemonicParsing="false" onAction="#createAnswer" text="Neue Antwort">
