--- a/src/main/resources/view/AdminView.fxml
+++ b/src/main/resources/view/AdminView.fxml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController">
-   <top>
-       <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-           <Label alignment="TOP_CENTER" layoutX="238.0" layoutY="19.0" prefHeight="17.0" prefWidth="125.0" text="Fragebogen Übersicht" textAlignment="CENTER" AnchorPane.leftAnchor="238.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="15.0" />
-           <Button layoutX="526.0" layoutY="15.0" mnemonicParsing="false" onAction="#logout" text="Logout" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
-           <HBox prefHeight="47.0" prefWidth="200.0" spacing="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
-               <Button mnemonicParsing="false" onAction="#exit" text="X" textAlignment="CENTER" />
-               <Button fx:id="btn_loc" mnemonicParsing="false" onAction="#changeLocation">
-                   <graphic>
-                       <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                           <Image url="@../images/icons/standort_2.png" />
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<BorderPane xmlns:fx="http://javafx.com/fxml" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx"
+            fx:controller="admin.AdminController">
+    <top>
+        <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <Label alignment="TOP_CENTER" layoutX="238.0" layoutY="19.0" prefHeight="17.0" prefWidth="125.0"
+                   text="Fragebogen Übersicht" textAlignment="CENTER" AnchorPane.leftAnchor="238.0"
+                   AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="15.0"/>
+            <Button layoutX="526.0" layoutY="15.0" mnemonicParsing="false" onAction="#logout" text="Logout"
+                    AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0"/>
+            <HBox prefHeight="47.0" prefWidth="200.0" spacing="15.0" AnchorPane.leftAnchor="15.0"
+                  AnchorPane.topAnchor="15.0">
+                <Button mnemonicParsing="false" onAction="#exit" text="X" textAlignment="CENTER"/>
+                <Button fx:id="btn_loc" mnemonicParsing="false" onAction="#changeLocation">
+                    <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../images/icons/standort_2.png"/>
                        </ImageView>
                    </graphic>
                    <tooltip>
@@ -32,12 +43,12 @@
    </bottom>
    <center>
       <TableView fx:id="questionnaireTableView" editable="true" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn fx:id="nameColumn" style="-fx-alignment: CENTER_LEFT;" text="Name" />
-          <TableColumn fx:id="dateColumn" style="-fx-alignment: CENTER_LEFT;" text="Erstelldatum" />
-            <TableColumn fx:id="activeColumn" text="Aktiv" />
-            <TableColumn fx:id="finalColumn" text="Final" />
-        </columns>
+          <columns>
+              <TableColumn fx:id="nameColumn" style="-fx-alignment: CENTER_LEFT;" text="Name"/>
+              <TableColumn fx:id="dateColumn" style="-fx-alignment: CENTER_LEFT;" text="Erstelldatum"/>
+              <TableColumn fx:id="activeColumn" prefWidth="163.0" text="Aktiv"/>
+              <TableColumn fx:id="finalColumn" prefWidth="120.0" text="Final"/>
+          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
