--- a/src/main/resources/view/LocationView.fxml
+++ b/src/main/resources/view/LocationView.fxml
@@ -6,12 +6,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<BorderPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="location.LocationController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="500.0" prefWidth="900.0"
+            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="location.LocationController">
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <ChoiceBox fx:id="choiceBox" prefWidth="300.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0" />
-            <Button mnemonicParsing="false" onAction="#next" prefHeight="25.0" text="Weiter" AnchorPane.bottomAnchor="16.0" AnchorPane.rightAnchor="128.0" />
+            <ChoiceBox fx:id="choiceBox" prefWidth="300.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0"
+                       AnchorPane.topAnchor="100.0"/>
+            <Button mnemonicParsing="false" onAction="#next" prefHeight="25.0" text="Weiter"
+                    AnchorPane.bottomAnchor="16.0" AnchorPane.rightAnchor="128.0"/>
          </children>
       </AnchorPane>
    </center>
