--- a/src/main/resources/view/QuestionListView.fxml
+++ b/src/main/resources/view/QuestionListView.fxml
@@ -7,17 +7,20 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="questionList.QuestionListController">
-   <bottom>
-      <AnchorPane prefHeight="44.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button layoutX="85.0" layoutY="10.0" mnemonicParsing="false" onAction="#newQuestion" text="Neu" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="88.0" />
-            <Button layoutX="464.0" layoutY="4.0" mnemonicParsing="false" onAction="#save" text="Fertig" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="88.0" />
-         </children>
-      </AnchorPane>
-   </bottom>
-   <center>
-      <TableView fx:id="questionTable" prefHeight="200.0" prefWidth="417.0" BorderPane.alignment="CENTER">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="questionList.QuestionListController">
+    <bottom>
+        <AnchorPane prefHeight="44.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <children>
+                <Button layoutX="85.0" layoutY="10.0" mnemonicParsing="false" onAction="#newQuestion" text="Neu"
+                        AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="88.0"/>
+                <Button layoutX="464.0" layoutY="4.0" mnemonicParsing="false" onAction="#save" text="Fertig"
+                        AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="88.0"/>
+            </children>
+        </AnchorPane>
+    </bottom>
+    <center>
+        <TableView fx:id="questionTable" prefHeight="200.0" prefWidth="417.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="nameColumn" prefWidth="100.0" text="Frage" />
           <TableColumn fx:id="categoryColumn" prefWidth="108.0" text="Kategorie" />
