--- a/src/main/resources/view/ReactView.fxml
+++ b/src/main/resources/view/ReactView.fxml
@@ -7,17 +7,18 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="react.ReactController">
-   <top>
-      <Label text="Sichtbarkeitsbedingungen ändern" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="8.0" />
-         </BorderPane.margin>
-      </Label>
-   </top>
-   <center>
-      <TableView fx:id="tbl_react" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-      	<placeholder>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="react.ReactController">
+    <top>
+        <Label text="Sichtbarkeitsbedingungen ändern" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets top="8.0"/>
+            </BorderPane.margin>
+        </Label>
+    </top>
+    <center>
+        <TableView fx:id="tbl_react" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <placeholder>
         	<Label text="Keine Bedinungen gesetzt." />
     	</placeholder>
         <columns>
