--- a/src/main/resources/view/StartView.fxml
+++ b/src/main/resources/view/StartView.fxml
@@ -11,17 +11,19 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="start.StartController">
-   <children>
-      <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0" />
-      <BorderPane prefHeight="400.0" prefWidth="600.0">
-         <center>
-            <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
-              <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="105.0" />
-                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="380.0" />
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="115.0" />
-              </columnConstraints>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
+           fx:controller="start.StartController">
+    <children>
+        <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0"/>
+        <BorderPane prefHeight="400.0" prefWidth="600.0">
+            <center>
+                <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                          minWidth="-Infinity">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="105.0"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="380.0"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="115.0"/>
+                    </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="139.0" minHeight="10.0" prefHeight="65.0" vgrow="ALWAYS" />
                   <RowConstraints maxHeight="135.0" minHeight="10.0" prefHeight="75.0" vgrow="ALWAYS" />
