--- a/src/main/resources/view/ValidationView.fxml
+++ b/src/main/resources/view/ValidationView.fxml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="validation.ValidationController">
-   <top>
-      <Label text="Validierung anpassen" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="8.0" />
-         </BorderPane.margin>
-      </Label>
-   </top>
-   <bottom>
-      <HBox prefHeight="51.0" prefWidth="600.0" spacing="8.0" BorderPane.alignment="CENTER">
-         <children>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="validation.ValidationController">
+    <top>
+        <Label text="Validierung anpassen" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets top="8.0"/>
+            </BorderPane.margin>
+        </Label>
+    </top>
+    <bottom>
+        <HBox prefHeight="51.0" prefWidth="600.0" spacing="8.0" BorderPane.alignment="CENTER">
+            <children>
             <Button fx:id="btn_new" mnemonicParsing="false" onAction="#createNew" text="Neu">
                <HBox.margin>
                   <Insets />
