--- a/src/main/resources/view/SurveyPreView.fxml
+++ b/src/main/resources/view/SurveyPreView.fxml
@@ -32,7 +32,9 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Button layoutX="14.0" layoutY="361.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#exitPreVeiw" prefHeight="50.0" prefWidth="50.0" text="X" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
+            <Button layoutX="14.0" layoutY="361.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false"
+                    onAction="#exitPreView" prefHeight="50.0" prefWidth="50.0" text="X" textAlignment="CENTER"
+                    AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0"/>
             <Button layoutX="527.0" layoutY="356.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#next" prefHeight="50.0" prefWidth="50.0" text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
             <Button layoutX="537.0" layoutY="366.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#pre" prefHeight="50.0" prefWidth="50.0" text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0" />
             <VBox fx:id="vbox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="100.0" />
