--- a/src/main/resources/view/SurveyView2.fxml
+++ b/src/main/resources/view/SurveyView2.fxml
@@ -1,57 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import impl.org.controlsfx.skin.DecorationPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<StackPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-           minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
-           fx:controller="survey.SurveyController">
-   <children>
-      <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0"/>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
-         <center>
-            <VBox fx:id="vbox" alignment="TOP_CENTER" BorderPane.alignment="CENTER"/>
-         </center>
-         <bottom>
+<DecorationPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                minWidth="-Infinity"
+                prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+                fx:controller="survey.SurveyController">
+    <BorderPane prefHeight="200.0" prefWidth="200.0">
+        <center>
+            <VBox fx:id="vbox" alignment="TOP_CENTER" spacing="8.0" BorderPane.alignment="CENTER"/>
+        </center>
+        <bottom>
             <AnchorPane prefHeight="70.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#exit" text="X"
-                          textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0"/>
-                  <Button layoutX="527.0" layoutY="356.0" mnemonicParsing="false" onAction="#next" text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
-                  <Button layoutX="537.0" layoutY="366.0" mnemonicParsing="false" onAction="#pre" text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0" />
-               </children>
+                <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#exit" text="X"
+                        textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0"/>
+                <Button fx:id="btn_next" layoutX="527.0" layoutY="356.0" mnemonicParsing="false" onAction="#next"
+                        text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0"
+                        AnchorPane.rightAnchor="15.0"/>
+                <Button fx:id="btn_pre" layoutX="537.0" layoutY="366.0" mnemonicParsing="false" onAction="#pre"
+                        text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0"
+                        AnchorPane.rightAnchor="80.0"/>
+                <HBox fx:id="footer_hBox" alignment="CENTER" layoutX="129.0" layoutY="23.0" prefHeight="25.0"
+                      prefWidth="309.0" spacing="8.0" AnchorPane.leftAnchor="129.0" AnchorPane.rightAnchor="162.0"/>
             </AnchorPane>
-         </bottom>
-         <top>
+        </bottom>
+        <top>
             <VBox alignment="CENTER" prefHeight="92.0" prefWidth="600.0" spacing="8.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="420.0" progress="0.0" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                     <padding>
-                        <Insets left="128.0" right="128.0" />
-                     </padding>
-                  </ProgressBar>
-                  <Label fx:id="lbl_count" alignment="CENTER" text="Frage xx/xx" textAlignment="CENTER" />
-                  <Label fx:id="lbl_headline" alignment="CENTER" textAlignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-               </children>
-               <BorderPane.margin>
-                  <Insets left="8.0" right="8.0" top="8.0" />
-               </BorderPane.margin>
+                <BorderPane.margin>
+                    <Insets left="8.0" right="8.0" top="8.0"/>
+                </BorderPane.margin>
+                <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="420.0"
+                             progress="0.0" VBox.vgrow="ALWAYS">
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                    <padding>
+                        <Insets left="128.0" right="128.0"/>
+                    </padding>
+                </ProgressBar>
+                <Label fx:id="lbl_count" alignment="CENTER" text="Frage xx/xx" textAlignment="CENTER"/>
+                <Label fx:id="lbl_headline" alignment="CENTER" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="12.0"/>
+                    </font>
+                </Label>
             </VBox>
-         </top>
-      </BorderPane>
-   </children>
-</StackPane>
+        </top>
+    </BorderPane>
+</DecorationPane>
