--- a/src/main/resources/view/StartView.fxml
+++ b/src/main/resources/view/StartView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,48 +12,61 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-<StackPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
+<StackPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2"
            fx:controller="de.vatrascell.nezr.start.StartController">
     <children>
         <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0"/>
         <BorderPane prefHeight="400.0" prefWidth="600.0">
             <center>
-                <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-                          minWidth="-Infinity">
+                <GridPane fx:id="gridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                          minHeight="-Infinity" minWidth="-Infinity">
                     <columnConstraints>
                         <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="105.0"/>
                         <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="380.0"/>
                         <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="115.0"/>
                     </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="139.0" minHeight="10.0" prefHeight="65.0" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="135.0" minHeight="10.0" prefHeight="75.0" vgrow="ALWAYS" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="questionnaireLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Fragebogen XXX" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Label fx:id="warningLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Label" textAlignment="CENTER" textFill="#c90000" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-               </children>
-            </GridPane>
-         </center>
-         <bottom>
-            <Button fx:id="startButton" mnemonicParsing="false" onAction="#next" text="Start" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="16.0" />
-               </BorderPane.margin>
-            </Button>
-         </bottom>
-         <top>
-            <AnchorPane prefWidth="600.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="17.0" prefWidth="600.0" text="Startseite" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="16.0" />
-                  <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#adminLogin" text="Admin" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0" />
-               </children>
-            </AnchorPane>
-         </top>
-      </BorderPane>
-   </children>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" percentHeight="50.0"
+                                        prefHeight="65.0" vgrow="ALWAYS"/>
+                        <RowConstraints maxHeight="135.0" minHeight="10.0" percentHeight="50.0" prefHeight="75.0"
+                                        vgrow="ALWAYS"/>
+                    </rowConstraints>
+                    <children>
+                        <Label fx:id="questionnaireLabel" alignment="CENTER" maxWidth="1.7976931348623157E308"
+                               text="Fragebogen XXX" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                               GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
+                        <Label fx:id="warningLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Label"
+                               textAlignment="CENTER" textFill="#c90000" GridPane.columnIndex="1"
+                               GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                        </Label>
+                        <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2"
+                                   GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER"
+                                   GridPane.vgrow="ALWAYS"/>
+                    </children>
+                </GridPane>
+            </center>
+            <bottom>
+                <Button fx:id="startButton" mnemonicParsing="false" onAction="#next" text="Start"
+                        BorderPane.alignment="CENTER">
+                    <BorderPane.margin>
+                        <Insets bottom="16.0"/>
+                    </BorderPane.margin>
+                </Button>
+            </bottom>
+            <top>
+                <AnchorPane prefWidth="600.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="17.0" prefWidth="600.0"
+                               text="Startseite" textAlignment="CENTER" AnchorPane.leftAnchor="0.0"
+                               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="16.0"/>
+                        <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#adminLogin" text="Admin"
+                                AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0"/>
+                    </children>
+                </AnchorPane>
+            </top>
+        </BorderPane>
+    </children>
 </StackPane>
